[package]
name = "http-types"
version = "2.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/http-types"
documentation = "https://docs.rs/http-types"
description = "Common types for HTTP operations."
keywords = ["http", "types", "request", "response", "h2"]
categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::http-server", "web-programming::websocket"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = ["cookie-secure"]
docs = ["unstable"]
unstable = []
cookie-secure = ["cookie/secure"]

[dependencies]
futures-lite = "1"
async-channel = "1"

# features: hyperium/http
http = { version = "0.2", optional = true }

anyhow = "1"
cookie = { version = "0.14", features = ["percent-encode"] }
infer = "0.2"
pin-project-lite = "0.1"
url = { version = "2", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.6"
rand = "0.7"
serde_qs = "0.7"
